--- a/index.html
+++ b/index.html
@@ -49,9 +49,119 @@
                 <div class="section-title">
                     <h2 class="section-title__heading">Онлайн контроль</h2>
                     <div class="section-title__image">
-                        <img src="img/video.svg" alt="Камера">
+                        <img src="img/video.svg" alt="Ремонт">
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="section types">
+            <div class="container">
+                <div class="section-title types__section-title">
+                    <h2 class="section-title__heading">Виды ремонта</h2>
+                    <div class="section-title__image">
+                        <img src="img/repair.svg" alt="Камера">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="card types__card">
+                            <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Косметический ремонт</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Укладка полов</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена сантехники</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена дверей</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <div class="card__pricetag">
+                                    <strong>от 900 руб / м<sup>2</sup></strong>
+                                </div>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="card types__card">
+                            <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Капитальный ремонт</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Укладка полов</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена сантехники</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена дверей</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <div class="card__pricetag">
+                                    <strong>от 1800 руб / м<sup>2</sup></strong>
+                                </div>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col">
+                        <div class="card types__card">
+                            <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
+                            <div class="card__text">
+                                <h3 class="card__title">Дизайнерский ремонт</h3>
+                                <!-- /.card__title -->
+                                <ul class="card__list">
+                                    <li class="card__item">Демонтаж старых покрытий</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Поклейка обоев</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Роспись стен и потолков</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Укладка полов</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена сантехники</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена розеток и выключателей</li>
+                                    <!-- /.card__item -->
+                                    <li class="card__item">Замена дверей</li>
+                                    <!-- /.card__item -->
+                                </ul>
+                                <!-- /.card__list -->
+                                <div class="card__pricetag">
+                                    <strong>от 4000 руб / м<sup>2</sup></strong>
+                                </div>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
             </div>
         </section>
     </main>
