feat: help from pixel perfect for section design

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <div class="card__pricetag">
-                                    <strong>от 1800 руб / м<sup>2</sup></strong>
+                                    <span>от 1800 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -152,7 +152,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <div class="card__pricetag">
-                                    <strong>от 4000 руб / м<sup>2</sup></strong>
+                                    <span>от 4000 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -166,7 +166,7 @@
         </section>
 
         <section class="section types">
-            <div class="container">
+            <div class="container types__design">
                 <div class="section-title types__section-title">
                     <h2 class="section-title__heading">Дизайн проект</h2>
                     <div class="section-title__image">
@@ -193,7 +193,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <div class="card__pricetag">
-                                    <strong>150 руб / м<sup>2</sup></strong>
+                                    <span>150 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -225,7 +225,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <div class="card__pricetag">
-                                    <strong>400 руб / м<sup>2</sup></strong>
+                                    <span>400 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -252,7 +252,7 @@
                                     <!-- /.card__item -->
                                     <li class="card__item">План электрики</li>
                                     <!-- /.card__item -->
-                                    <li class="card__item">План света</li>
+                                    <li class="card__item card__item-end">План света</li>
                                     <!-- /.card__item -->
                                     <li class="card__item">Стенные развертки</li>
                                     <!-- /.card__item -->
@@ -267,7 +267,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <div class="card__pricetag">
-                                    <strong>900 руб / м<sup>2</sup></strong>
+                                    <span>900 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
                             <!-- /.card__text -->
