--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                     <!-- /.card__item -->
                                 </ul>
                                 <!-- /.card__list -->
-                                <div class="card__pricetag">
+                                <div class="card__pricetag card__pricetag-1">
                                     <span>150 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
@@ -224,7 +224,7 @@
                                     <!-- /.card__item -->
                                 </ul>
                                 <!-- /.card__list -->
-                                <div class="card__pricetag">
+                                <div class="card__pricetag card__pricetag-1">
                                     <span>400 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
@@ -266,7 +266,7 @@
                                     <!-- /.card__item -->
                                 </ul>
                                 <!-- /.card__list -->
-                                <div class="card__pricetag">
+                                <div class="card__pricetag card__pricetag-1">
                                     <span>900 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
