--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 </ul>
                                 <!-- /.card__list -->
                                 <div class="card__pricetag">
-                                    <strong>от 900 руб / м<sup>2</sup></strong>
+                                    <span>от 900 руб / м<sup>2</sup></span>
                                 </div>
                             </div>
                             <!-- /.card__text -->
