--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </nav>
                 <div class="contacts menu__contacts">
                     <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-                    <button class="button contacts__button button--primary">Заказать звонок</button>
+                    <button class="button contacts__button button--primary" data-toggle="modal">Заказать звонок</button>
                 </div>                
             </div>
         </div>
@@ -37,8 +37,8 @@
                 <div class="hero__content">                
                     <h1 class="title hero__title">Tурецкий ремонт в&nbsp;<span class="title__primary">Ростове-на-дону</span></h1>
                     <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-                    <button class="button hero__button button--primary">Рассчитать стоимость</button>
-                    <button class="button hero__button button--outline">Отправить заявку</button>                    
+                    <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
+                    <button class="button hero__button button--outline" data-toggle="modal">Отправить заявку</button>                    
                 </div>
             </div>         
             <a href="#" class="hero__scroll-down">Листайте вниз</a>
@@ -306,7 +306,6 @@
         <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
-
-
+    <script src="js/main.js"></script>
 </body>
 </html>
