--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             </div>
         </section>
 
-        <section class="section types">
-            <div class="container types__design">
+        <section class="section types__design">
+            <div class="container">
                 <div class="section-title types__section-title">
                     <h2 class="section-title__heading">Дизайн проект</h2>
                     <div class="section-title__image">
