--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
                 <div class="policy modal__policy">
                     <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
-                    <label for="policy-checkbox" class="policy__label">я соглашаюсь с обработкой данных</label>
+                    <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
                 </div>
                 <button class="button button--primary modal__button">Отправить заявку</button>
             </form>
