--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
         <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
