--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>        
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -44,6 +45,56 @@
             <a href="#" class="hero__scroll-down">Листайте вниз</a>
         </section>
 
+    <section class="section section--dark projects">
+        <div class="container">
+            <div class="row">
+                <div class="col-50">
+                    <div class="section-title section-title--left">
+                        <h2 class="section-title__heading section-title__heading--primary">Завершенные <span class="section-title__word">проекты</span></h2>
+                        <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
+                    </div>
+                    <div class="swiper-container">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper swiper-no-swiping">
+                            <!-- Slides -->
+                            <div class="swiper-slide">
+                                <div class="swiper-slide__text">
+                                    <h3 class="swiper-slide__heading">Город</h3>
+                                    <span class="swiper-slide__value">Ростов-на-Дону <br> ЖК Адмирал</span>
+                                </div>
+                                <div class="swiper-slide__text">
+                                    <h3 class="swiper-slide__heading">Площадь</h3>
+                                    <span class="swiper-slide__value">82 м<sup>2</sup></span>
+                                </div>
+                                <div class="swiper-slide__text">
+                                    <h3 class="swiper-slide__heading">Срок ремонта</h3>
+                                    <span class="swiper-slide__value">3,5 месяца</span>
+                                </div>
+                                <div class="swiper-slide__text">
+                                    <h3 class="swiper-slide__heading">Стоимость</h3>
+                                    <span class="swiper-slide__value">По запросу</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                </div>                
+                <div class="col-50">
+                    <div class="swiper-container">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper swiper-no-swiping">
+                            <!-- Slides -->
+                            <div class="swiper-slide"><img src="img/img-1.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="img/img-2.png" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
         <section class="section control">
             <div class="container">
                 <div class="section-title">
@@ -64,7 +115,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card types__card">
                             <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
                             <div class="card__text">
@@ -96,7 +147,7 @@
                         <!-- /.card -->
                     </div>
                     <!-- /.col -->
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card types__card">
                             <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
                             <div class="card__text">
@@ -128,7 +179,7 @@
                         <!-- /.card -->
                     </div>
                     <!-- /.col -->
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card types__card">
                             <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
                             <div class="card__text">
@@ -175,7 +226,7 @@
                     <p class="card__subtitle">Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ</p>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card types__card">
                             <img src="img/design/design-1.png" alt="Косметический ремонт" class="card__image">
                             <div class="card__text">
@@ -201,7 +252,7 @@
                         <!-- /.card -->
                     </div>
                     <!-- /.col -->
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card types__card">
                             <img src="img/design/design-2.png" alt="Капитальный ремонт" class="card__image">
                             <div class="card__text">
@@ -233,7 +284,7 @@
                         <!-- /.card -->
                     </div>
                     <!-- /.col -->
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card types__card">
                             <img src="img/design/design-3.jpg" alt="Дизайнерский ремонт" class="card__image">
                             <div class="card__text">
@@ -307,6 +358,7 @@
     </div>
     <!-- /.modal -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
