--- a/index.html
+++ b/index.html
@@ -357,6 +357,9 @@
         <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
+
+    <a href="#" class="scroll_top" title="Наверх"></a>
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="js/main.js"></script>
