reload function up

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
-                            <div class="swiper-slide"><img src="img/img-1.jpg" alt=""></div>
-                            <div class="swiper-slide"><img src="img/img-2.png" alt=""></div>
+                            <div class="swiper-slide"><img src="img/slider/img-1.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="img/slider/img-2.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -358,7 +358,7 @@
     </div>
     <!-- /.modal -->
 
-    <a href="#" class="scroll_top" title="Наверх"></a>
+    <a href="#" id="scroll-top" class="scroll-top" title="Наверх"></a>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
