feat: adaptiw for projects

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                             <!-- Slides -->
                             <div class="swiper-slide"><img src="img/slider/img-1.jpg" alt=""></div>
                             <div class="swiper-slide"><img src="img/slider/img-2.png" alt=""></div>
+                            <div class="swiper-slide"><img src="img/slider/img-3.jpg" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -358,7 +359,7 @@
     </div>
     <!-- /.modal -->
 
-    <a href="#" id="scroll-top" class="scroll-top" title="Наверх"></a>
+    <a href="#" class="scroll-top"></a>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
