--- a/index.html
+++ b/index.html
@@ -331,6 +331,71 @@
                 <!-- /.row -->
             </div>
         </section>
+
+        <section class="section section--dark purpose">
+            <div class="container">
+                <div class="row">
+                    <div class="col-50">
+                        <div class="section-title section-title--left">
+                            <p class="section-title__subtitle">как мы работаем</p>
+                            <h2 class="section-title__heading section-title__heading--primary">6 шагов<span class="section-title__word">до цели</span></h2>
+                            <p class="section-title__part">1/6</p>
+                            <h3 class="section-title__title section-title__title--primary">Выезд на замеры <br> помещения</h3>
+                            <p class="section-title__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
+                                Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+                                </p>
+                        </div>
+                    </div>                
+                    <div class="col-50"> <div class="swiper-container">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper swiper-no-swiping">
+                            <!-- Slides -->
+                            <div class="swiper-slide">
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number">01</h3>
+                                    <span class="swiper-slide__value">Выезд на замер <br> помещения</span>
+                                </div>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number">02</h3>
+                                    <span class="swiper-slide__value">Составление <br> сметы</span>
+                                </div>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number">03</h3>
+                                    <span class="swiper-slide__value">Разработка <br> дизайн-проекта</span>
+                                </div>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number">04</h3>
+                                    <span class="swiper-slide__value">Закупка расходных <br> материалов</span>
+                                </div>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number">05</h3>
+                                    <span class="swiper-slide__value">Ремонтно-отделочные <br> работы</span>
+                                </div>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number">06</h3>
+                                    <span class="swiper-slide__value">Прием-сдача <br> работ</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-container">
+                            <!-- Additional required wrapper -->
+                            <div class="swiper-wrapper swiper-no-swiping">
+                                <!-- Slides -->
+                                <div class="swiper-slide"><img src="img/slider/img01.jpg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img02.jpg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img03.jpg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img04.jpg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img05.jpg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img06.jpg" alt=""></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <div class="modal">
