--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=d1b7ccac-b176-4adb-bd55-6c0cfc8d08a9&lang=ru_RU" type="text/javascript">
+    </script>
 </head>
 <body>
     <header class="header">
@@ -446,6 +448,9 @@
                     <button class="button button--primary footer__button">Отправить</button>
                 </form>
             </div>
+            <div class="map footer__map" id="map">
+                <!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afe79fc31522df22f8e93fb67d580160a0b4d3c475c817cc5f460b92fa5e242d8&amp;width=100%25&amp;height=465&amp;lang=ru_RU&amp;scroll=false"></script> -->
+            </div>    
         </div>    
         <div class="footer__menu section--dark">
             <div class="container">
