feat: add section our-team and our-clients

--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
             </div>
         </section>
 
-        <section class="section section--dark purpose">
-            <div class="container">
+        <section class="section section--dark">
+            <div class="container section__purpose ">
                 <div class="row">
                     <div class="col-50">
                         <div class="section-title section-title--left wow fadeIn" data-wow-delay="0.2s">
@@ -420,6 +420,137 @@
                     </div>
                 </div>
             </div>
+            </div>
+        </section>
+
+        <section class="section our-team section--light">
+            <div class="container">
+                <div class="section-title types__section-title">
+                    <h2 class="section-title__heading wow slideInUp">наша команда</h2>
+                    <div class="section-title__image">
+                        <img src="img/icon/team-icon.svg" alt="Дизайн проект">
+                    </div>
+                    <p class="card__subtitle our-team__subtitle">Наша команда помогла стать счастливее более чем 500 семьям, и мы не собираемся останавливаться</p>
+                </div>
+                <div class="row">
+                    <div class="col-30">
+                        <div class="card types__card wow zoomIn" data-wow-delay="0.2s">
+                            <img src="img/our_team/first/icon/idea.png" alt="иконка-1" class="team-icon">
+                            <img src="img/our_team/first/image1.png" alt="Алексей Колмаков" class="card__image">
+                            <div class="card__text our-team__card">
+                                <h3 class="card__title">Алексей Колмаков</h3>
+                                    <p class="card__item">Проектный менеджер</p>
+                                <div class="card__pricetag card__pricetag-1 our-team__button">
+                                    <span>ОПыт работы 8 лет</span>
+                                </div>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-30">
+                        <div class="card types__card wow zoomIn" data-wow-delay="0.4s">
+                            <img src="img/our_team/2/icon/Group 15.svg" alt="иконка-2" class="team-icon">
+                            <img src="img/our_team/2/image2.png" alt="Алиса Сухорукова" class="card__image">
+                            <div class="card__text our-team__card">
+                                <h3 class="card__title">Алиса Сухорукова</h3>
+                                    <p class="card__item">Дизайнер</p>
+                                <div class="card__pricetag card__pricetag-1 our-team__button">
+                                    <span>Опыт работы 6 лет</span>
+                                </div>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-30">
+                        <div class="card types__card wow zoomIn" data-wow-delay="0.6s">
+                            <img src="img/our_team/3/icon/portfolio.svg" alt="иконка-3" class="team-icon">
+                            <img src="img/our_team/3/image3.png" alt="Давид Волынев" class="card__image">
+                            <div class="card__text our-team__card">
+                                <h3 class="card__title">Давид Волынев</h3>
+                                    <p class="card__item">Бригадир</p>
+                            <div class="card__pricetag card__pricetag-1 our-team__button">
+                                <span>Опыт работы 7 лет</span>
+                            </div>    
+                            </div>
+                            
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+                <p class="our-team__text">Каждый сотрудник нашей компании является квалифицированным штатным специалистом с опытом работы от 6 лет. У нас нет гастарбайтеров, каждый сотрудник выполняет работу, соответствующую его специальности.</p>
+            </div>
+        </section>
+
+        <section class="section our-clients section--light">
+            <div class="container">
+                <div class="section-title types__section-title">
+                    <h2 class="section-title__heading wow slideInUp">наши клиенты</h2>
+                    <div class="section-title__image">
+                        <img src="img/icon/client_icon.svg" alt="наши клиенты">
+                    </div>
+                    <p class="card__subtitle our-clients__subtitle">80% наших клиентов рекомендуют нас своим знакомым и друзьям</p>
+                </div>
+                <div class="row">
+                    <div class="col-30">
+                        <div class="card types__card wow zoomIn" data-wow-delay="0.2s">
+                            <div class="card__text our-clients__card">
+                                <div class="our-clients__name">
+                                    <img src="img/clients/img1.png" alt="Савельева Екатерина Львовна" class="card__image client-img">
+                                    <h3 class="card__title">Савельева Екатерина Львовна</h3>  
+                                </div>                                
+                                    <p class="card__item our-clients__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарна, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Цены демократические. Я рекомендую этих мастеров.</p>
+                                <div class="card__pricetag card__pricetag-1 our-clients__button">
+                                    <span>40 М<sup>2</sup></span><span>48 дней</span>
+                                </div>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-30">
+                        <div class="card types__card wow zoomIn" data-wow-delay="0.4s">
+                            <div class="card__text our-clients__card">
+                                <div class="our-clients__name">
+                                    <img src="img/clients/img2.png" alt="Большов Михаил Анатольевич" class="card__image client-img">
+                                    <h3 class="card__title">Большов Михаил Анатольевич</h3>
+                                </div>
+                                    <p class="card__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Я рекомендую этих мастеров.</p>
+                                <div class="card__pricetag card__pricetag-1 our-clients__button">
+                                    <span>90 М<sup>2</sup></span><span>128 дней</span>
+                                </div>
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-30">
+                        <div class="card types__card wow zoomIn" data-wow-delay="0.6s">
+                            <div class="card__text our-clients__card">      
+                                <div class="our-clients__name">
+                                    <img src="img/clients/img3.png" alt="Хасанов Даниил Муратович" class="card__image client-img">
+                                    <h3 class="card__title">Хасанов Даниил Муратович</h3>
+                                </div>
+                                    <p class="card__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Цены демократические.</p>
+                            <div class="card__pricetag card__pricetag-1 our-clients__button">
+                                <span>56 М<sup>2</sup></span><span>86 дней</span>
+                            </div>    
+                            </div>
+                            <!-- /.card__text -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
             </div>
         </section>
     </main>
