feat: add section our-team and our-clients

--- a/index.html
+++ b/index.html
@@ -434,13 +434,15 @@
                 </div>
                 <div class="row">
                     <div class="col-30">
-                        <div class="card types__card wow zoomIn" data-wow-delay="0.2s">
+                        <button class="our-team__icon">
                             <img src="img/our_team/first/icon/idea.png" alt="иконка-1" class="team-icon">
+                        </button>
+                        <div class="card types__card wow zoomIn" data-wow-delay="0.2s">
                             <img src="img/our_team/first/image1.png" alt="Алексей Колмаков" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Алексей Колмаков</h3>
                                     <p class="card__item">Проектный менеджер</p>
-                                <div class="card__pricetag card__pricetag-1 our-team__button">
+                                <div class="card__pricetag card__pricetag-2 our-team__button">
                                     <span>ОПыт работы 8 лет</span>
                                 </div>
                             </div>
@@ -450,13 +452,15 @@
                     </div>
                     <!-- /.col -->
                     <div class="col-30">
-                        <div class="card types__card wow zoomIn" data-wow-delay="0.4s">
+                        <button class="our-team__icon">
                             <img src="img/our_team/2/icon/Group 15.svg" alt="иконка-2" class="team-icon">
+                        </button>
+                        <div class="card types__card wow zoomIn" data-wow-delay="0.4s">
                             <img src="img/our_team/2/image2.png" alt="Алиса Сухорукова" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Алиса Сухорукова</h3>
                                     <p class="card__item">Дизайнер</p>
-                                <div class="card__pricetag card__pricetag-1 our-team__button">
+                                <div class="card__pricetag card__pricetag-2 our-team__button">
                                     <span>Опыт работы 6 лет</span>
                                 </div>
                             </div>
@@ -466,15 +470,17 @@
                     </div>
                     <!-- /.col -->
                     <div class="col-30">
+                        <button class="our-team__icon">
+                            <img src="img/our_team/3/icon/portfolio.svg" alt="иконка-3" class="our-teamicon">
+                        </button>
                         <div class="card types__card wow zoomIn" data-wow-delay="0.6s">
-                            <img src="img/our_team/3/icon/portfolio.svg" alt="иконка-3" class="team-icon">
                             <img src="img/our_team/3/image3.png" alt="Давид Волынев" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Давид Волынев</h3>
                                     <p class="card__item">Бригадир</p>
-                            <div class="card__pricetag card__pricetag-1 our-team__button">
-                                <span>Опыт работы 7 лет</span>
-                            </div>    
+                                <div class="card__pricetag card__pricetag-2 our-team__button">
+                                    Опыт работы 7 лет
+                                </div>    
                             </div>
                             
                             <!-- /.card__text -->
@@ -503,11 +509,13 @@
                             <div class="card__text our-clients__card">
                                 <div class="our-clients__name">
                                     <img src="img/clients/img1.png" alt="Савельева Екатерина Львовна" class="card__image client-img">
-                                    <h3 class="card__title">Савельева Екатерина Львовна</h3>  
+                                    <h3 class="card__title our-clients__title">Савельева Екатерина Львовна</h3>  
                                 </div>                                
                                     <p class="card__item our-clients__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарна, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Цены демократические. Я рекомендую этих мастеров.</p>
                                 <div class="card__pricetag card__pricetag-1 our-clients__button">
-                                    <span>40 М<sup>2</sup></span><span>48 дней</span>
+                                    <img src="img/clients/icon/left/Group 21.4.svg" alt="иконка"><span class="our-clients__span">40 М<sup>2</sup></span>
+                                    <img class="our-clients__stick" src="img/clients/icon/stick/Vector 2.svg" alt="">
+                                    <img src="img/clients/icon/right/Group.svg" alt="иконка"><span class="our-clients__span">48 дней</span>
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -520,11 +528,13 @@
                             <div class="card__text our-clients__card">
                                 <div class="our-clients__name">
                                     <img src="img/clients/img2.png" alt="Большов Михаил Анатольевич" class="card__image client-img">
-                                    <h3 class="card__title">Большов Михаил Анатольевич</h3>
+                                    <h3 class="card__title our-clients__title">Большов Михаил Анатольевич</h3>
                                 </div>
                                     <p class="card__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Я рекомендую этих мастеров.</p>
                                 <div class="card__pricetag card__pricetag-1 our-clients__button">
-                                    <span>90 М<sup>2</sup></span><span>128 дней</span>
+                                    <img src="img/clients/icon/left/Group 21.4.svg" alt="иконка"><span class="our-clients__span">90 М<sup>2</sup></span>
+                                    <img class="our-clients__stick" src="img/clients/icon/stick/Vector 2.svg" alt="">
+                                    <img src="img/clients/icon/right/Group.svg" alt="иконка"><span class="our-clients__span">128 дней</span>
                                 </div>
                             </div>
                             <!-- /.card__text -->
@@ -537,11 +547,13 @@
                             <div class="card__text our-clients__card">      
                                 <div class="our-clients__name">
                                     <img src="img/clients/img3.png" alt="Хасанов Даниил Муратович" class="card__image client-img">
-                                    <h3 class="card__title">Хасанов Даниил Муратович</h3>
+                                    <h3 class="card__title our-clients__title">Хасанов Даниил Муратович</h3>
                                 </div>
                                     <p class="card__item">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Цены демократические.</p>
                             <div class="card__pricetag card__pricetag-1 our-clients__button">
-                                <span>56 М<sup>2</sup></span><span>86 дней</span>
+                                <img src="img/clients/icon/left/Group 21.4.svg" alt="иконка"><span class="our-clients__span">56 М<sup>2</sup></span>
+                                <img class="our-clients__stick" src="img/clients/icon/stick/Vector 2.svg" alt="">
+                                <img src="img/clients/icon/right/Group.svg" alt="иконка"><span class="our-clients__span">86 дней</span>
                             </div>    
                             </div>
                             <!-- /.card__text -->
@@ -581,7 +593,7 @@
                 </form>
             </div>
             <div class="map footer__map" id="map">
-                <!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afe79fc31522df22f8e93fb67d580160a0b4d3c475c817cc5f460b92fa5e242d8&amp;width=100%25&amp;height=465&amp;lang=ru_RU&amp;scroll=false"></script> -->
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afe79fc31522df22f8e93fb67d580160a0b4d3c475c817cc5f460b92fa5e242d8&amp;width=100%25&amp;height=465&amp;lang=ru_RU&amp;scroll=false"></script>
             </div>                  
         </div>    
         <div class="footer__menu section--dark">
